After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682265 - ClutterBinLayout not honoring ClutterActor position set through clutter_actor_set_position
ClutterBinLayout not honoring ClutterActor position set through clutter_actor...
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-08-20 13:44 UTC by Erick Perez Castellanos
Modified: 2012-08-20 14:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
The code sample to test it (1.15 KB, text/x-csrc)
2012-08-20 13:44 UTC, Erick Perez Castellanos
  Details
bin-layout: Ensure that fixed position get a 0.0 alignment (1.72 KB, patch)
2012-08-20 13:51 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description Erick Perez Castellanos 2012-08-20 13:44:55 UTC
Created attachment 221839 [details]
The code sample to test it

ClutterBinLayout constructed with CLUTTER_BIN_ALIGNMENT_CENTER alignment as default should honor the fixed position of an actor when set through clutter_actor_set_position.

The code sample below shows this it is not working.
Comment 1 Emmanuele Bassi (:ebassi) 2012-08-20 13:51:28 UTC
Created attachment 221843 [details] [review]
bin-layout: Ensure that fixed position get a 0.0 alignment

If the actor has a fixed position set, but it's not using the BinLayout
alignment enumeration to set its alignment, then we force the alignment
factor to 0.0; this is consistent with what happens with an explicit
alignment of CLUTTER_BIN_ALIGNMENT_FIXED.
Comment 2 Emmanuele Bassi (:ebassi) 2012-08-20 14:05:18 UTC
Attachment 221843 [details] pushed as 8536314 - bin-layout: Ensure that fixed position get a 0.0 alignment